@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-12-10T08:16:21Z",
-  "count_outdated" : 710,
-  "uniques_outdated" : 400,
+  "timestamp" : "2022-12-10T16:17:30Z",
+  "count_outdated" : 712,
+  "uniques_outdated" : 401,
   "count" : 730,
   "uniques" : 409,
   "clones" : [
-    {
-      "timestamp": "2022-11-26T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-11-27T00:00:00Z",
       "count": 4,
